Add conversion path reporting
